--- a/index.css
+++ b/index.css
@@ -1,26 +1,34 @@
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600');
-
+html{
+    scroll-behavior: smooth;
+}
 body {
     margin: 0;
     background: #b7faff;
     font-family: 'Work Sans', sans-serif;
     font-weight: 800;
+    
 }
 
 .container {
-    font-size: 60px;
+    font-size: 20px;
     width: 80%;
     margin: 0 auto;
 }
 
 header {
+    position: fixed;
+    top: 0%;
+    width: 100%;
     background: #f5f4f4;
+    
 }
 
 header::after {
     content: '';
     display: table;
     clear: both;
+    
 }
 
 .logo {
