--- a/productos.css
+++ b/productos.css
@@ -7,13 +7,6 @@
     box-sizing: border-box;
 }
 
-body {
-    margin: auto;
-    max-width: 1200px;
-    font-family: 'Lato';
-    color: #333;
-}
-
 .icon-cart {
     width: 40px;
     height: 40px;
@@ -37,23 +30,6 @@ header {
 
 .container-icon {
     position: relative;
-}
-
-.count-product {
-    position: absolute;
-    top: 55%;
-    right: 0;
-
-    background-color: #000;
-    color: #fff;
-    width: 25px;
-    height: 25px;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-
 }
 
 #contador-productos {
@@ -150,7 +126,7 @@ header {
 .container-items {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px
+    gap: 10px
 }
 
 .item {
@@ -193,7 +169,7 @@ header {
 .info-product button {
     border: none;
     background: none;
-    background-color: black;
+    background-color: rgb(5, 10, 36);
     color: white;
     padding: 15px 10px;
     cursor: pointer;
